# fpga-device-server

./: .cproject  .gitignore  .gitmodules  .project  99-faout.rules  CMakeLists.txt  README  README.md  config.json
client/: FaoutClientBase.py  QFaoutClient.py  QTestApplication.py  testsequence.npy
client/python/: QFaoutApplication.py  setup.py
client/python/lib/pyfpgaclient/: DigitizerDevice.py  FaoutDevice.py  FpgaClientBase.py  QFaoutWidgets.py  QFpgaClient.py  QTestApplication.py
src/: DeviceRequestHandler.cpp  DeviceRequestHandler.h  FaoutRequestHandler.cpp  FaoutRequestHandler.h  faout-server.cpp  fpga-device-server.cpp
src/config/: Config.cpp  Config.h
src/devices/: Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  DeviceProgrammer.cpp  DeviceProgrammer.h  FaoutDevice.cpp  FaoutDevice.h  FaoutManager.cpp  FaoutManager.h
src/devices/xc3sprog/: bitfile.cpp  iobase.cpp  iobase.h  ioftdi.cpp  ioftdi.h  jtag.cpp  progalgxc3s.cpp
src/libftdi/: ftdi.c  ftdi.h  ftdi_version_i.h
src/libusb_asio/: libusb_service.cpp  libusb_service.h
src/network/: ClientConnection.cpp  ClientConnection.h  ConnectionManager.cpp  ConnectionManager.h  ControlConnection.cpp  ControlConnection.h  ControlConnectionManager.cpp  ControlConnectionManager.h  ControlHandler.cpp  ControlHandler.h  ControlServer.cpp  ControlServer.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h
